Fix FASTA Alignment View
# Conflicts:
#	project/plugins.sbt

--- a/app/assets/styles/_compatibility.scss
+++ b/app/assets/styles/_compatibility.scss
@@ -6,4 +6,10 @@
    #logo img {
       height: 100%  
    }
+  #alignmentResultView table {
+    border-collapse: separate;
+    .alignmentTBody td {
+      padding: 0;
+    }
+  }
 }
